Test regenerate